kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: journalingapp
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: journalingapp
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
