kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journalingapp-ingress
  namespace: journalingapp
spec:
  ingressClassName: nginx
  rules:
    - host: journalingapp.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
